--- a/CTFd/themes/core/templates/scoreboard.html
+++ b/CTFd/themes/core/templates/scoreboard.html
@@ -4,7 +4,7 @@
   <div class="jumbotron">
     <div class="container">
       <h1>
-        {% trans %}Scoreboard{% endtrans %}
+        <i class="fas fa-trophy me-3"></i>{% trans %}Scoreboard{% endtrans %}
       </h1>
     </div>
   </div>
