--- a/CTFd/themes/core/templates/challenges.html
+++ b/CTFd/themes/core/templates/challenges.html
@@ -4,7 +4,7 @@
   <div class="jumbotron">
     <div class="container">
       <h1>
-        {% trans %}Challenges{% endtrans %}
+        <i class="fas fa-flag"></i>{% trans %}Challenges{% endtrans %}
       </h1>
     </div>
   </div>
