--- a/CTFd/themes/core/templates/teams/teams.html
+++ b/CTFd/themes/core/templates/teams/teams.html
@@ -3,7 +3,7 @@
 {% block content %}
   <div class="jumbotron">
     <div class="container">
-      <h1>{% trans %}Teams{% endtrans %}</h1>
+      <h1><i class="fas fa-users-cog me-3"></i>{% trans %}Teams{% endtrans %}</h1>
     </div>
   </div>
 
