--- a/CTFd/themes/core/templates/users/users.html
+++ b/CTFd/themes/core/templates/users/users.html
@@ -3,7 +3,7 @@
 {% block content %}
   <div class="jumbotron">
     <div class="container">
-      <h1>{% trans %}Users{% endtrans %}</h1>
+      <h1><i class="fas fa-users me-3"></i>{% trans %}Users{% endtrans %}</h1>
     </div>
   </div>
   <div class="container">
